# fastapi-example

./: .gitignore  Dockerfile  README.md  logging.yaml  main.py  performance_test.py  pyproject.toml
app/: auth.py  models.py
app/routers/: chat.py  users.py  web.py
app/routers/api/v1/: users.py
fastapi_example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
others/: performance_results.txt
static/: app.html  handle_auth.html  index.html
templates/: index.html  index.html.j2
tests/: test_chat.py  test_main.py  test_main_old.py
